# snacinet

./: README.md  pyproject.toml
snacinet/: db.sqlite3  manage.py
snacinet/accounts/: urls.py  views.py
snacinet/accounts/templates/: login.html  main.html  register.html
snacinet/cinevault/: apps.py  urls.py  utils.py  views.py
snacinet/cinevault/templates/: search_results.html
snacinet/community/: forms.py  models.py  urls.py  views.py
snacinet/community/static/community/: styles.css
snacinet/community/templates/community/: post_create.html  post_detail.html  post_list.html
snacinet/snacinet/: asgi.py  settings.py  urls.py  wsgi.py
