[tool.poetry]
name = "snacinet"
version = "0.1.0"
description = ""
authors = ["DevSmapy <lyk456@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
